clients/editor/tree-sitter-riffql/test/corpus/highlighting.txt
==================
RiffQL highlighting tokens
==================

query List() { return Found {} outcomes Found }

---

(source_file
  (keyword)
  (identifier)
  (punctuation)
  (punctuation)
  (punctuation)
  (keyword)
  (identifier)
  (punctuation)
  (punctuation)
  (keyword)
  (identifier)
  (punctuation))

==================
Bounded runtime limit tokens
==================

query List($limit: Limit<100> = 25) { return Found {} outcomes Found }

---

(source_file
  (keyword)
  (identifier)
  (punctuation)
  (parameter)
  (punctuation)
  (keyword)
  (operator)
  (number)
  (operator)
  (operator)
  (number)
  (punctuation)
  (punctuation)
  (keyword)
  (identifier)
  (punctuation)
  (punctuation)
  (keyword)
  (identifier)
  (punctuation))
